# smartsquash

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
smartsquash/: __main__.py  decorators.py  fixup.py  helpers.py  sq.py  squash.py
test/: conftest.py  test_fixup.py  test_helpers.py  test_sq.py  test_squash.py
